implementando cor em categorias
